--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 <body>
     <div id="navigation">
         <div class="logo jump">
-            <a href="portfolio.html"><img src="asset/image/Circle-A.svg" alt="" width="50px"></a>
+            <a href="index.html"><img src="asset/image/Circle-A.svg" alt="" width="50px"></a>
         </div>
 
         <div class="nav">
