fixed some link

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </div>
                 </a>
                 
-                <a href="#">
+                <a href="http://14.231.150.60">
                     <div class="item">
                         <div class="bighead">
                             <div class="head">
