update links to my assignments

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
 
             <div class="grid">
-                <a href="youtube.com">
+                <a href="https://alexphoenix45.000webhostapp.com/buoi4-bai2.html">
                     <div class="item">
                         <div class="bighead">
                             <div class="head">
@@ -122,7 +122,7 @@
                     </div>
                 </a>
 
-                <a href="#">
+                <a href="https://alexphoenix45.000webhostapp.com/buoi4-bai3.html">
                     <div class="item">
                         <div class="bighead">
                             <div class="head">
