fixed an anchor

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p class="white bold" style="font-size: 60px; line-height: 73px; padding-top: 15px;">Alex Phoenix.</p>
             <p class="black bold a" style="font-size: 60px; line-height: 73px; padding-top: 15px;">This is my portfolio.</p>
             <p class="bwhite normal" style="font-size: 18px; line-height: 22px; padding-top: 15px; max-width: 700px;">I'm a student at <a href="hnmu.edu.vn" class="black bold uhover" style="text-decoration: none;">Hanoi Metropolitan University</a>. My major is Information Technology. Currently, I'll upload my works here. As soon as my skills get better, this will be my completed portfolio.</p>
-            <a href="#aboutme" class="black bold button jump" style="margin-top: 50px;">Check out my works!</a>
+            <a href="#work" class="black bold button jump" style="margin-top: 50px;">Check out my works!</a>
         </div>
     
         <div id="aboutme">
