--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     </div>
                 </a>
                 
-                <a href="#">
+                <a href="https://alexphoenix45.000webhostapp.com/bai3-buoi2.html">
                     <div class="item">
                         <div class="bighead">
                             <div class="head">
