update link to assignment

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
 
             <div class="grid">
-                <a href="https://alexphoenix45.000webhostapp.com/buoi4-bai2.html">
+                <a href="https://alexphoenix45.000webhostapp.com/kiemtragiuaky.html">
                     <div class="item">
                         <div class="bighead">
                             <div class="head">
